add chainlink-nodes collection

--- a/src/pages/chainlink-functions/index.astro
+++ b/src/pages/chainlink-functions/index.astro
@@ -1,10 +1,10 @@
 ---
 import MainLayout from "~/layouts/MainLayout.astro"
 import { getEntry } from "astro:content"
-const indexEntry = await getEntry("chainlink-functions", "index")
-const { Content } = await indexEntry.render()
+const entry = await getEntry("chainlink-functions", "index")
+const { Content } = await entry.render()
 ---
 
-<MainLayout>
+<MainLayout frontmatter={entry.data}>
   <Content />
 </MainLayout>
