--- a/src/pages/blockchain-integrations-framework/index.astro
+++ b/src/pages/blockchain-integrations-framework/index.astro
@@ -1,10 +1,10 @@
 ---
 import MainLayout from "~/layouts/MainLayout.astro"
 import { getEntry } from "astro:content"
-const indexEntry = await getEntry("blockchain-integrations-framework", "index")
-const { Content } = await indexEntry.render()
+const entry = await getEntry("blockchain-integrations-framework", "index")
+const { Content } = await entry.render()
 ---
 
-<MainLayout>
+<MainLayout frontmatter={entry.data}>
   <Content />
 </MainLayout>
