--- a/src/pages/search-index.astro
+++ b/src/pages/search-index.astro
@@ -12,15 +12,30 @@ const postsMdxWithContent = postsMdx.map((post) => {
   const url = new URL(post.file, import.meta.url)
   var content = fs.readFileSync(url, "utf-8")
 
-  // Temp fix for Algolia record size limits: Limit record size with .substring()
   if (content.length > 78000) {
-    content = content.substring(0, 78000)
-    console.warn("\x1b[1;43mRecord exceeds 78000 chars and was trimmed - " + url + "\x1b[0m")
+    console.warn("\x1b[1;43mRecord exceeds 78000 chars and was splitted into chunks - " + url + "\x1b[0m")
+    const splittedContent = splitPageIntoChunks(content, 78000)
+    const chunks = splittedContent.map((chunk) => {
+      return { ...post, rawContent: () => chunk }
+    })
+    return chunks
   }
   return { ...post, rawContent: () => content }
 })
 
-const markDownFiles = [...postsMdxWithContent]
+// Helper function for splitting content by the chunkSize:
+function splitPageIntoChunks(pageContent, chunkSize) {
+  const chunks = []
+  let currentIndex = 0
+  while (currentIndex < pageContent.length) {
+    const chunk = pageContent.substr(currentIndex, chunkSize)
+    chunks.push(chunk)
+    currentIndex += chunkSize
+  }
+  return chunks
+}
+
+const markDownFiles = [...postsMdxWithContent].flat()
 
 //const allContent = [...pages, ...postsMdx]
 
