--- a/src/pages/search-index.astro
+++ b/src/pages/search-index.astro
@@ -1,4 +1,5 @@
 ---
+import { splitTextByHeadings } from "../scripts/split-text-by-headings"
 import { MarkdownInstance } from "astro"
 import fs from "node:fs"
 
@@ -17,25 +18,6 @@ const postsMdxWithContent = postsMdx.map((post) => {
   })
   return chunks
 })
-
-function splitTextByHeadings(text) {
-  const headingRegex = /^(#{1,4})\s+(.*)$/gm
-  const sections = []
-  let match
-  let lastIndex = 0
-  while ((match = headingRegex.exec(text))) {
-    const sectionContent = text.substring(lastIndex, match.index).trim()
-    const sectionText = sectionContent
-    sections.push(sectionText)
-    lastIndex = match.index
-  }
-  // Add the last section (if any) after the last heading
-  if (lastIndex < text.length) {
-    const sectionContent = text.substring(lastIndex).trim()
-    sections.push(sectionContent)
-  }
-  return sections
-}
 
 const markDownFiles = [...postsMdxWithContent].flat()
 //const allContent = [...pages, ...postsMdx]
