Fix search indexing

--- a/src/pages/search-index.astro
+++ b/src/pages/search-index.astro
@@ -29,11 +29,11 @@ const transformMarkdownInstancesToIndexes = async (instances: MarkdownInstance<R
       const { title, section, metadata } = instance.frontmatter
       const headings = await instance.getHeadings()
       const content = !!instance.rawContent ? await instance.rawContent() : undefined
-
+      const href = instance.url?.replace("src/content/", "").replace(".mdx", "")
       return {
         title,
         headings,
-        url: instance.url,
+        url: href,
         section,
         description: metadata?.description ?? undefined,
         content,
