--- a/src/pages/search-index.astro
+++ b/src/pages/search-index.astro
@@ -29,7 +29,7 @@ const transformMarkdownInstancesToIndexes = async (instances: MarkdownInstance<R
       const { title, section, metadata } = instance.frontmatter
       const headings = await instance.getHeadings()
       const content = !!instance.rawContent ? await instance.rawContent() : undefined
-      const href = instance.url?.replace("src/content/", "").replace(".mdx", "")
+      const href = instance.url?.replace("src/content", "").replace(".mdx", "")
       return {
         title,
         headings,
